# alexandria

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml  docker-compose.yml
benchmark/: Dockerfile  benchmark.py  benchmark.sh  output.txt
docs/: raft.txt
src/: lib.rs  main.rs
src/raft/: client.rs  message.rs  mod.rs  server.rs  state_machine.rs
src/raft/logging/: mod.rs
src/raft/node/: candidate.rs  follower.rs  leader.rs  log.rs  mod.rs
src/storage/: mod.rs
src/storage/lsm/: memtable.rs  mod.rs  sstable.rs  wal.rs
src/utils/config/: mod.rs
src/utils/log/: mod.rs
tests/: raft_election_tests.rs  raft_log_replication_tests.rs
