[package]
name = "alexandria"
version = "0.1.0"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.32.0", features = ["full"]}
tokio-stream = {version = "0.1.14", features = ["net"]}
serde = { version = "1.0.188", features = ["derive"] }
ron = "0.8"
serde_yaml = "0.9.25"
tokio-serde = "0.8.0"
lazy_static = "1.4.0"
rand = "0.8.5"
log = "0.4.20"
simple-logging = "2.0.2"
